# pmdarima

./: .codecov.yml  .coveragerc  .gitignore  .travis.yml  AUTHORS.md  CITATION.cff  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Makefile  README.md  _configtest  _configtest.c  about.html  appveyor.yml  arima.pkl  azure-pipelines.yml  contributing.html  contributors.html  exog.csv  genindex.html  index.html  meson.build  migration-guide.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  refreshing.html  release.sh  requirements.txt  search.html  searchindex.js  seasonal-differencing-issues.html  serialization.html  setup.cfg  setup.html  setup.py  setup32.cfg  (+6 more)
.circleci/: config.yml
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  stale.yml  wip.yml
.pyramid-cache/: 2018-07-13_07-58-56.875635-112-286241377.pmdpkl  2018-07-13_07-59-09.984072-112-286241285.pmdpkl  2018-07-13_07-59-10.177860-211-291560533.pmdpkl  2018-07-13_07-59-10.259822-211-301565473.pmdpkl
0.0.0/: contributors.html  py-modindex.html  search.html  searchindex.js  serialization.html  setup.html
0.9.0/: .buildinfo  about.html  contributing.html  contributors.html  objects.inv  refreshing.html  search.html  searchindex.js  serialization.html  setup.html  whats_new.html
1.0.0/: about.html  contributing.html  contributors.html  index.html  search.html  searchindex.js  serialization.html  tips_and_tricks.html  whats_new.html
1.1.0/: .buildinfo  about.html  contributing.html  contributors.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  refreshing.html  search.html  serialization.html  setup.html  tips_and_tricks.html  user_guide.html  whats_new.html
1.1.1/: .buildinfo  about.html  contributing.html  contributors.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  refreshing.html  search.html  searchindex.js  serialization.html  setup.html  tips_and_tricks.html  user_guide.html  whats_new.html
1.2.0/: .buildinfo  about.html  contributing.html  contributors.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  refreshing.html  search.html  searchindex.js  serialization.html  setup.html  tips_and_tricks.html  user_guide.html  whats_new.html
1.2.1/: .buildinfo  about.html  contributing.html  contributors.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  refreshing.html  search.html  searchindex.js  serialization.html  setup.html  tips_and_tricks.html  user_guide.html  whats_new.html
1.3.0/: citing.html  contributing.html  genindex.html  refreshing.html  search.html  searchindex.js  serialization.html  setup.html  tips_and_tricks.html
1.4.0/: about.html  citing.html  genindex.html  index.html  refreshing.html  search.html  searchindex.js  tips_and_tricks.html  usecases.html  user_guide.html  whats_new.html
1.5.1/: about.html  index.html  objects.inv  tips_and_tricks.html  usecases.html  whats_new.html
1.5.2/: .buildinfo  citing.html  contributors.html  genindex.html  index.html  py-modindex.html  refreshing.html  setup.html  whats_new.html
1.5.3/: .buildinfo  about.html  citing.html  contributing.html  contributors.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  refreshing.html  search.html  searchindex.js  serialization.html  setup.html  tips_and_tricks.html  usecases.html  user_guide.html  whats_new.html
pmdarima/: __init__.py  _config.py  base.py  context_managers.py  decorators.py  meson.build  metrics.py  pipeline.py  setup.py
pmdarima/__check_build/: __init__.py  _check_build.c  meson.build  setup.py
pmdarima/__check_build/tests/: meson.build  test_check_build.py
pmdarima/_build_utils/: __init__.py  meson.build  pre_build_helpers.py
pmdarima/arima/: __init__.py  _arima.c  _arima.pyx  _arima_fast_helpers.h  _auto_solvers.py  _context.py  _doc.py  _validation.py  approx.py  arima.py  auto.py  base.py  meson.build  seasonality.py  setup.py  stationarity.py  utils.py  warnings.py
pmdarima/arima/tests/: meson.build  test_approx.py  test_arima.py  test_arima_diagnostics.py  test_auto.py  test_auto_solvers.py  test_c_arima.py  test_context.py  test_seasonality.py  test_stationarity.py  test_utils.py  test_validation.py
pmdarima/arima/tests/data/: issue_191.csv
pmdarima/arima/tests/utils/: images.py
pmdarima/compat/: __init__.py  _internal.py  matplotlib.py  meson.build  numpy.py  pandas.py  pmdarima.py  pytest.py  python.py  sklearn.py  statsmodels.py
pmdarima/compat/tests/: meson.build  test_pmdarima.py  test_python.py  test_sklearn.py  test_statsmodels.py
pmdarima/datasets/: __init__.py  _base.py  airpassengers.py  ausbeer.py  austres.py  gasoline.py  heartrate.py  lynx.py  meson.build  setup.py  stocks.py  sunspots.py  taylor.py  wineind.py  woolyrnq.py
pmdarima/datasets/data/: dated.pkl  msft.pkl
pmdarima/datasets/tests/: meson.build  test_load_datasets.py
pmdarima/model_selection/: __init__.py  _split.py  _validation.py  meson.build
pmdarima/model_selection/tests/: meson.build  test_split.py  test_validation.py
pmdarima/preprocessing/: __init__.py  base.py  meson.build  setup.py
pmdarima/preprocessing/endog/: __init__.py  base.py  boxcox.py  fourier.py  log.py  meson.build
pmdarima/preprocessing/endog/tests/: meson.build  test_base.py  test_boxcox.py  test_fourier.py  test_log.py
pmdarima/preprocessing/exog/: __init__.py  _fourier.pyx  base.py  dates.py  fourier.py  meson.build  setup.py
pmdarima/preprocessing/exog/tests/: meson.build  test_base.py  test_dates.py  test_fourier.py
pmdarima/preprocessing/tests/: test_base.py
pmdarima/tests/: meson.build  test_benchmarks.py  test_context_managers.py  test_estimators.py  test_metrics.py  test_pipeline.py
pmdarima/utils/: __init__.py  _array.pyx  _show_versions.py  array.py  meson.build  metaestimators.py  setup.py  testing.py  visualization.py  wrapped.py
pmdarima/utils/tests/: meson.build  test_array.py  test_meta.py  test_show_versions.py  test_testing.py  test_vis.py  test_wrapped.py
(+2450 files in other folders)
