[build-system]
requires = [
    "numpy==2.0.0",
    "scipy==1.7.2; python_version == '3.10'",
    "scipy==1.9.3; python_version == '3.11'",
    "scipy==1.11.2; python_version == '3.12'",
    "statsmodels==0.13.2; python_version <= '3.10'",
    "statsmodels==0.13.3; python_version == '3.11'",
    "statsmodels==0.14.0; python_version == '3.12'",
    "cython>=0.29,!=0.29.18,!=0.29.31",
    "setuptools>=42,!=50.0.0,<60.0; python_version < '3.10'",
    "setuptools>=42,!=50.0.0; python_version >= '3.10'",
]
build-backend = "setuptools.build_meta:__legacy__" # TODO: Don't use legacy backend
