[build-system]
requires = [
    "numpy==2.0.0",
    "scipy==1.13.0",
    "statsmodels==0.14.2",
    "cython>=0.29,!=0.29.18,!=0.29.31",
    "setuptools>=42,!=50.0.0,<60.0; python_version < '3.10'",
    "setuptools>=42,!=50.0.0; python_version >= '3.10'",
]
build-backend = "setuptools.build_meta:__legacy__" # TODO: Don't use legacy backend
