# This is adapted from sklearn's setup cfg.

[aliases]
# python2.7 has upgraded unittest and it is no longer compatible with some
# of our tests, so we run all through nose
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we drop nose and we
# rewrite tests using yield with parametrize
addopts =
    --disable-pytest-warnings

[metadata]
description-file = README.md
