# This is adapted from sklearn's setup cfg.

[aliases]
test = pytest

[tool:pytest]
filterwarnings =
    # Warnings that we raise:
    ignore::UserWarning

    # Warnings that statsmodels raises a lot of
    ignore::statsmodels.tools.sm_exceptions.HessianInversionWarning

[metadata]
description-file = README.md
