# This is adapted from sklearn's setup cfg.

[aliases]
test = pytest

[tool:pytest]
filterwarnings =
    # Warnings that we raise:
    ignore::UserWarning

    # Warnings that statsmodels raises a lot of
    ignore::statsmodels.tools.sm_exceptions.HessianInversionWarning

    # statsmodels warning that doesn't apply to us
    ignore:fft=True

    # joblib warning that we can't control (fixed in this commit https://github.com/joblib/joblib/commit/a861f43167ab63fe683c45679e34143751cb976d, but not deployed yet)
    # This is the solution from pytest: https://github.com/pytest-dev/pytest/issues/4116#issuecomment-429101898
    ignore:tostring.*is deprecated

    # This is fixed in patsy... No idea which dependency is actually calling patsy (https://github.com/pydata/patsy/blob/4c613d0ad3009044ca3aee5a5d70bd56af8f396b/patsy/constraint.py#L13-L16)
    ignore:Using or importing the ABCs

[metadata]
description_file = README.md
